# C_codewars_projects

./: CMakeLists.txt  Makefile  README.md  run.ps1
decode_the_morse_code/: CMakeLists.txt  main.c
help_the_bookseller/: CMakeLists.txt  main.c
hosts_in_subnet/: CMakeLists.txt  Makefile  main.c
make_the_deadfish_swim/: CMakeLists.txt  Makefile  main.c
